# calyvim

./: .gitignore  LICENSE  README.md  db.sqlite3  go.mod  go.sum  index.html  jsconfig.json  manage.go  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  server.go  setup.py  vite.config.js
app/: App.vue  main.js
app/api/: client.js  teams.js
app/router/: index.js
app/stores/: app.js
app/views/: HealthView.vue  TeamDashboard.vue
calyvim/: admin.py  app.py  apps.py  asgi.py  cli.py  conf.py  controller.py  db.py  models.py  orm.py  request.py  responses.py  router.py  settings.py  urls.py  views.py  wsgi.py
calyvim/migrations/: 0001_initial.py  0002_organization_organizationmember.py  0002_state.py  0003_organization_members.py  0003_team_issue_prefix.py  0004_alter_organizationmember_invited_by.py  0004_alter_state_sequence_issue_issuegoal_issuesnapshot_and_more.py  0005_alter_organization_options.py  0005_rename_confirmed_at_user_date_joined.py  0006_remove_organization_domain_and_more.py  0007_user_is_anonymous.py  0008_alter_issue_created_by_alter_issuegoal_reviewed_by_and_more.py  0009_user_is_active.py  0010_team_users.py  0011_state_color.py
calyvim/models/: __init__.py  base.py  common.py  fallbacks.py  (+5 more)
cmd/: create_migration.go  generate.go  main.go  migrate.go  root.go  serve.go  setup_database.go
migrations/: 1746209090_create_users_table.sql  1746374574_drop_is_active_from_users.sql  1746387586_create_organizations_table.sql  1746388382_create_organizations_memberships_table.sql
web/: App.vue  main.js
(+64 files in other folders)
