[project]
name = "calyvim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "httpx>=0.28.1",
    "icecream>=2.1.4",
    "more-itertools>=10.7.0",
    "psycopg>=3.2.9",
    "redis>=6.2.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
